# zed-wakatime

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  extension.toml
.github/: dependabot.yml
.github/workflows/: release.yml
src/: lib.rs
wakatime/: Cargo.toml
wakatime-ls/: Cargo.toml  README.md
wakatime-ls/src/: main.rs
wakatime/src/: lib.rs
