[package]
name = "wakatime-ls"
version.workspace = true
edition = "2021"
repository = "https://github.com/wakatime/zed-wakatime"


[dependencies]
arc-swap = "1.7.1"
chrono = "0.4.42"
clap = "4.5.49"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-std", "macros", "process", "rt-multi-thread"], default-features = false }
tower-lsp = "0.20.0"
url = "2.5.7"
