[package]
name = "wakatime-ls"
version.workspace = true
edition = "2021"
repository = "https://github.com/wakatime/zed-wakatime"


[dependencies]
arc-swap = "1.9.1"
chrono = "0.4.44"
clap = "4.6.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["io-std", "macros", "process", "rt-multi-thread"], default-features = false }
tower-lsp = "0.20.0"
url = "2.5.8"
